<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity1">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/data_fio"
            android:hint="@string/fio"
            android:layout_alignParentTop="true"
            android:layout_marginTop="17dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:inputType="textCapWords"
            />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/data_birth"
            android:hint="@string/birth_date"
            android:layout_below="@+id/data_fio"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:editable="false"
            />

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/data_gender"
            android:layout_below="@+id/data_birth"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/data_position"
            android:hint="@string/position"
            android:layout_below="@+id/data_gender"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:inputType="textCapSentences"
            />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/data_prize"
            android:hint="@string/pize"
            android:layout_below="@+id/data_position"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/data_phone"
            android:hint="@string/phone"
            android:layout_below="@+id/data_prize"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/data_email"
            android:hint="@string/email"
            android:layout_below="@+id/data_phone"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_txt"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/btn_clear"
            android:layout_below="@+id/data_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"/>

</RelativeLayout>
