<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac2_title"
        android:id="@+id/ac2_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fio"
            android:id="@+id/textView"
            android:layout_below="@+id/ac2_title"
            android:layout_toLeftOf="@+id/ac2_title"
            android:layout_alignParentLeft="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:singleLine="false"
            android:text="---"
            android:layout_below="@+id/ac2_title"
            android:layout_toRightOf="@+id/textView"
            android:layout_alignParentRight="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView"
            android:layout_toLeftOf="@+id/textView2"
            android:layout_alignParentLeft="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView2"
            android:layout_toRightOf="@+id/textView3"
            android:layout_alignParentRight="true"
            android:text="---"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/textView4"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView4"
            android:layout_toRightOf="@+id/textView5"
            android:layout_alignParentRight="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/textView6"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView6"
            android:layout_toRightOf="@+id/textView7"
            android:layout_alignParentRight="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pize"
            android:id="@+id/textView9"
            android:layout_below="@+id/textView7"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/textView8"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView8"
            android:layout_toRightOf="@+id/textView7"
            android:layout_alignParentRight="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:id="@+id/textView11"
            android:layout_below="@+id/textView9"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/textView10"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:autoLink="phone"
            android:id="@+id/textView12"
            android:layout_below="@+id/textView10"
            android:layout_toRightOf="@+id/textView11"
            android:layout_alignParentRight="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/textView13"
            android:layout_below="@+id/textView11"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/textView12"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---"
            android:autoLink="email"
            android:id="@+id/textView14"
            android:layout_below="@+id/textView12"
            android:layout_toRightOf="@+id/textView13"
            android:layout_alignParentRight="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/replyText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_above="@+id/replyBtn"
            android:layout_below="@+id/textView15"
            android:hint="@string/letter"
            />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answering"
            android:id="@+id/replyBtn"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"/>
    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:id="@+id/dp"
            android:layout_below="@+id/textView14"
            android:background="@android:color/darker_gray"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/answer"
            android:id="@+id/textView15"
            android:layout_below="@+id/dp"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>
